renaming the User entity to AppUser

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,10 +1,10 @@
 app.titles= Spring Boot Samplessss
 non.unique.email=U\u017Cytkownik o emailu: {0} ju\u017C istnieje. Je\u015Bli chcesz za\u0142o\u017Cy\u0107 kolejne konto, prosz\u0119 poda\u0107 inny mail.
-NotBlank.user.firstName=Prosz\u0119 wpisa\u0107 swoje imi\u0119.
-Size.user.firstName=Imi\u0119 mo\u017Ce mie\u0107 max 50 znak\u00F3w.
-Size.user.lastName=Nazwisko mo\u017Ce mie\u0107 max 50 znak\u00F3w.
-NotBlank.user.lastName=Prosz\u0119 wpisa\u0107 swoje nazwisko.
-NotBlank.user.email=Prosz\u0119 wpisa\u0107 adres email.
-Email.user.email=Adres email jest nieprawid\u0142owy.
-NotBlank.user.password=Prosz\u0119 wpisa\u0107 has\u0142o.
-Size.user.password=Has\u0142o musi mie\u0107 przynajmniej 4 znaki.
+NotBlank.appUser.firstName=Prosz\u0119 wpisa\u0107 swoje imi\u0119.
+Size.appUser.firstName=Imi\u0119 mo\u017Ce mie\u0107 max 50 znak\u00F3w.
+Size.appUser.lastName=Nazwisko mo\u017Ce mie\u0107 max 50 znak\u00F3w.
+NotBlank.appUser.lastName=Prosz\u0119 wpisa\u0107 swoje nazwisko.
+NotBlank.appUser.email=Prosz\u0119 wpisa\u0107 adres email.
+Email.appUser.email=Adres email jest nieprawid\u0142owy.
+NotBlank.appUser.password=Prosz\u0119 wpisa\u0107 has\u0142o.
+Size.appUser.password=Has\u0142o musi mie\u0107 przynajmniej 4 znaki.
