--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 app.titles= Spring Boot Samplessss
-non.unique.email=U\u017Cytkownik o emailu: {0} ju\u017C istnieje. Je\u015Bli chcesz za\u0142o\u017Cy\u0107 kolejne konto, prosz\u0119 poda\u0107 inny mail.
+non.unique.email=U\u017Cytkownik o tym emailu ju\u017C istnieje. Je\u015Bli chcesz za\u0142o\u017Cy\u0107 kolejne konto, prosz\u0119 poda\u0107 inny mail.
 NotBlank.appUser.firstName=Prosz\u0119 wpisa\u0107 swoje imi\u0119.
 Size.appUser.firstName=Imi\u0119 mo\u017Ce mie\u0107 max 50 znak\u00F3w.
 Size.appUser.lastName=Nazwisko mo\u017Ce mie\u0107 max 50 znak\u00F3w.
