in registration form it is required to repeat the password

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ NotBlank.appUser.email=Prosz\u0119 wpisa\u0107 adres email.
 Email.appUser.email=Adres email jest nieprawid\u0142owy.
 NotBlank.appUser.password=Prosz\u0119 wpisa\u0107 has\u0142o.
 Size.appUser.password=Has\u0142o musi mie\u0107 przynajmniej 4 znaki.
+non.identical.passwords=Has\u0142a nie s\u0105 takie same.
 
 Size.institution.name=Nazwa musi mie\u0107 3-100 znak\u00F3w.
 NotBlank.institution.description=Prosz\u0119 poda\u0107 opis fundacji.
