--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ Email.appUser.email=Adres email jest nieprawid\u0142owy.
 NotBlank.appUser.password=Prosz\u0119 wpisa\u0107 has\u0142o.
 Size.appUser.password=Has\u0142o musi mie\u0107 przynajmniej 4 znaki.
 non.identical.passwords=Has\u0142a nie s\u0105 takie same.
+non.valid.password=B\u0142\u0119dne has\u0142o.
 
 Size.institution.name=Nazwa musi mie\u0107 3-100 znak\u00F3w.
 NotBlank.institution.description=Prosz\u0119 poda\u0107 opis fundacji.
